The Word Prediction Algorithm is working

--- a/WordPredAlgo.Rmd
+++ b/WordPredAlgo.Rmd
@@ -86,38 +86,65 @@ df5<-conv2char(df5)
 df6<-conv2char(df6)
 df7<-conv2char(df7)
 
+splitInput <- unlist(strsplit("at the end of the", split = " "))
+paste(tail(splitInput, 4), collapse = " ")
+
 class(df3$triMinus1)
 colnames(df1)<- "Word"
-
-predictNgram <- function(input, df1, df2, df3){
+object.size(df5)
+predictNgram <- function(input, df1, df2, df3, df4, df5) {
       input <- stripWhitespace(removePunctuation(tolower(input)))
       splitInput <- unlist(strsplit(input, split = " "))
+
+      if (length(splitInput) > 4){
+            input2 <- paste(tail(splitInput, 4), collapse = " ")
+      } else {
+            input2 <- paste(splitInput, collapse = " ")
+      }
+      pentaPred <- head(df5[which(df5$pentaMinus1 == input2),]$NextWord, 10)
+      if (length(pentaPred > 0)){
+            print("I was able to match the last five words")
+            return(pentaPred)
+      } else {            
+      
+      if (length(splitInput) > 3){
+            input2 <- paste(tail(splitInput, 3), collapse = " ")
+      } else {
+            input2 <- paste(splitInput, collapse = " ")
+      }
+      quadPred <- head(df4[which(df4$quadMinus1 == input2),]$NextWord, 10)
+      if (length(quadPred > 0)){
+            print("I was able to match the last four words")
+            return(quadPred)
+      } else {      
+      
       if (length(splitInput) > 2){
             input2 <- paste(tail(splitInput, 2), collapse = " ")
       } else {
             input2 <- paste(splitInput, collapse = " ")
       }
-      trigramPred <- tail(df3[which(df3$triMinus1 == input2),]$NextWord, 10)
-      if (length(trigramPred > 0)){
+      triPred <- head(df3[which(df3$triMinus1 == input2),]$NextWord, 10)
+      if (length(triPred > 0)){
             print("I was able to match the last three words")
-            return(trigramPred)
+            return(triPred)
       } else {
             input2 <- tail(splitInput, 1)
-            bigramPred <- tail(df2[which(df2$biMinus1 == input2),]$NextWord, 10)
-            if (length(bigramPred) > 0){
-                  print("I was able to match the last two words")
-                  return(bigramPred)
-            } else {
-                  unigramPred <- tail(uni$Word, 10)
-                  if (length(unigramPred) > 0){
-                        print("I was not able to find a match, but here are some common words")
-                        return(unigramPred)
-                  }
+            biPred <- head(df2[which(df2$biMinus1 == input2),]$NextWord, 10)
+      if (length(biPred) > 0){
+            print("I was able to match the last two words")
+            return(biPred)
+      } else {
+            uniPred <- head(uni$Word, 10)
+            if (length(uniPred) > 0){
+            print("I was not able to find a match, but here are some common words")
+            return(uniPred)
             }
+          }
       }
+    }
+  }
 }
-
-predictNgram("Guy at my table's wife got up to go to the bathroom and I asked about dessert and he started telling me about his", df1, df2, df3)
+predictNgram("at the end of the", df1, df2, df3, df4, df5)
 
 ```
 
