--- a/WordPredAlgo.Rmd
+++ b/WordPredAlgo.Rmd
@@ -11,13 +11,13 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Load preprocessed data
 ```{r}
-uni<-read.csv("uni.csv")
+#uni<-read.csv("uni.csv")
 bi<-read.csv("bi.csv")
 tri<-read.csv("tri.csv")
 quad<-read.csv("quad.csv")
 penta<-read.csv("penta.csv")
-hexa<-read.csv("hexa.csv")
-hepta<-read.csv("hepta.csv")
+#hexa<-read.csv("hexa.csv")
+#hepta<-read.csv("hepta.csv")
 ```
 ## Split ngrams into n-1grams and last words
 
@@ -27,8 +27,8 @@ bi$Word<-as.character(bi$Word)
 bi2 <- do.call(rbind, strsplit(bi$Word, split = " "))
 bi3 <- cbind(bi2[, 1], bi2[, 2])
 colnames(bi3)<-c("biMinus1","NextWord")
-
-
+remove(tri2)
+object.size(quad)
 tri$Word<-as.character(tri$Word)
 tri2 <- do.call(rbind, strsplit(tri$Word, split = " "))
 tri3 <- cbind(apply(tri2[, 1:2], 1, function(x) paste(x, collapse = " ")),
@@ -67,18 +67,17 @@ colnames(hepta3)<-c("heptaMinus1","NextWord")
 
 
 ```{r}
-
 df7<-as.data.frame(hepta3)
 df6<-as.data.frame(hexa3)
 df5<-as.data.frame(penta3)
 df4<-as.data.frame(quad3)
 df3<-as.data.frame(tri3)
 df2<-as.data.frame(bi3)
-df1<-as.data.frame(uni$Word)
+# df1<-as.data.frame(uni$Word)
 
 conv2char <- function(x) data.frame(lapply(x, as.character), stringsAsFactors=FALSE)
 
-df1<-conv2char(df1)
+# df1<-conv2char(df1)
 df2<-conv2char(df2)
 df3<-conv2char(df3)
 df4<-conv2char(df4)
@@ -86,50 +85,58 @@ df5<-conv2char(df5)
 df6<-conv2char(df6)
 df7<-conv2char(df7)
 
-splitInput <- unlist(strsplit("at the end of the", split = " "))
-paste(tail(splitInput, 4), collapse = " ")
 
-class(df3$triMinus1)
-colnames(df1)<- "Word"
-object.size(df5)
+# colnames(df1)<- "Word"
+
+# Save RDS files
+# top10<- head(df1, 10)
+# saveRDS(top10, "top10.rds")
+saveRDS(df2, "df2tiny.rds")
+saveRDS(df3, "df3tiny.rds")
+saveRDS(df4, "df4tiny.rds")
+saveRDS(df5, "df5tiny.rds")
+saveRDS(df6, "df6tiny.rds")
+saveRDS(df7, "df7tiny.rds")
 
 ```
 
 ```{r}
-predictNgram <- function(input, df1, df2, df3, df4, df5, df6, df7) {
-  input <- stripWhitespace(removePunctuation(tolower(input)))
-  splitInput <- unlist(strsplit(input, split = " "))
-  heptaPred <- as.character(NULL)
-  hexaPred <- as.character(NULL)
-  pentaPred <- as.character(NULL)
-  quadPred <- as.character(NULL)
-  triPred <- as.character(NULL)
-  biPred <- as.character(NULL)
- # First count the words in the input and obtain highest number of consecutive word matches
-  if (length(splitInput) >= 6){
-    input2 <- paste(tail(splitInput, 6), collapse = " ")
-    heptaPred <- head(df7[which(df7$heptaMinus1 == input2),]$NextWord, 10)
-  }
-  if  (length(heptaPred) > 0){
-    print("I was able to match the last six words you entered")
-    return(heptaPred)
-} else { 
+library(tm)
+ ## Prediction Algorithm
+  predictNgram <- function(input, top10, df2, df3, df4, df5, df6, df7) {
+    input <- stripWhitespace(removePunctuation(tolower(input)))
+    splitInput <- unlist(strsplit(input, split = " "))
+    heptaPred <- as.character(NULL)
+    hexaPred <- as.character(NULL)
+    pentaPred <- as.character(NULL)
+    quadPred <- as.character(NULL)
+    triPred <- as.character(NULL)
+    biPred <- as.character(NULL)
+    # First count the words in the input and obtain highest number of consecutive word matches
+    if (length(splitInput) >= 6){
+      input2 <- paste(tail(splitInput, 6), collapse = " ")
+      heptaPred <- head(df7[which(df7$heptaMinus1 == input2),]$NextWord, 10)
+    }
+    if  (length(heptaPred) > 0){
+      print("I was able to match the last six words you entered")
+      return(heptaPred)
+    } else { 
       if (length(splitInput) >= 5){
         input2 <- paste(tail(splitInput, 5), collapse = " ")
         hexaPred <- head(df6[which(df6$hexaMinus1 == input2),]$NextWord, 10)
       }
       if  (length(hexaPred) > 0){
-      print("I was able to match the last five words you entered")
-      return(hexaPred)
-    } else { 
+        print("I was able to match the last five words you entered")
+        return(hexaPred)
+      } else { 
         if (length(splitInput) >= 4){
-        input2 <- paste(tail(splitInput, 4), collapse = " ")
-        pentaPred <- head(df5[which(df5$pentaMinus1 == input2),]$NextWord, 10)
+          input2 <- paste(tail(splitInput, 4), collapse = " ")
+          pentaPred <- head(df5[which(df5$pentaMinus1 == input2),]$NextWord, 10)
         }
         if  (length(pentaPred) > 0){
-        print("I was able to match the last four words you entered")
-        return(pentaPred)
-      } else {  
+          print("I was able to match the last four words you entered")
+          return(pentaPred)
+        } else {  
           if (length(splitInput) >= 3){
             input2 <- paste(tail(splitInput, 3), collapse = " ")
             quadPred <- head(df4[which(df4$quadMinus1 == input2),]$NextWord, 10)
@@ -137,36 +144,38 @@ predictNgram <- function(input, df1, df2, df3, df4, df5, df6, df7) {
           if  (length(quadPred) > 0){
             print("I was able to match the last three words you entered")
             return(quadPred)
-        } else {
+          } else {
             if (length(splitInput) >= 2){
-                input2 <- paste(tail(splitInput, 2), collapse = " ")
-                triPred <- head(df3[which(df3$triMinus1 == input2),]$NextWord, 10)
+              input2 <- paste(tail(splitInput, 2), collapse = " ")
+              triPred <- head(df3[which(df3$triMinus1 == input2),]$NextWord, 10)
             }
             if  (length(triPred) > 0){
-                print("I was able to match the last two words you entered")
-                return(triPred)
-          } else {
+              print("I was able to match the last two words you entered")
+              return(triPred)
+            } else {
               if (length(splitInput) > 1){
                 input2 <- tail(splitInput, 1)
                 biPred <- head(df2[which(df2$biMinus1 == input2),]$NextWord, 10)
               }
               if  (length(biPred) > 0){
-              print("I was able to match the last word you entered")
-              return(biPred)
-              } else {
-                uniPred <- head(df1$Word, 10)
+                print("I was able to match the last word you entered")
                 return(biPred)
+              } else {
+                uniPred <- head(top10$Word, 10)
+                print("I was not able to find any matches, 
+                      so I will provide the most common word(s)")
+                return(uniPred)
               }
+            }
           }
-        }
         }
       }
     }
-}
+  }  
 ```
 
 ```{r}
-predictNgram("If this isn't the cutest thing you've ever seen, then you must be", df1, df2, df3, df4, df5, df6, df7)
+predictNgram("If this isn't the cutest thing you've ever seen, then you must be", top10, df2, df3, df4, df5, df6, df7)
 ```
 
 
